# spandaworks

./: .gitignore  .workmux.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MIGRATION_NOTES.md  README.md  SECURITY.md  TALOS-SPEC.md
.beads/: issues.jsonl
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml  pim-mcp-server.yml  release.yml
.opencode/agent/: reviewer.md  validator.md
.opencode/command/: close.md  governance.md  open.md  ops.md
assets/agents/: builder.md  documenter.md  explore.md  researcher.md  story.md  test-writer.md
assets/commands/: governance.md
aur-packages/: PACKAGE-SUMMARY.md
aur-packages/gtd-capture/: INSTALL.md  README.md  bspwmrc.example  sxhkdrc.example
config/: aliases.sh
crates/aiandi/: Cargo.toml
crates/aiandi/src/: agents.rs  main.rs  skills.rs
crates/aiandi/src/commands/: doctor.rs  inbox.rs  init.rs  mod.rs  serve.rs
crates/aiandi/tests/: integration_test.rs
docs/: MODAL-ARCHITECTURE.md  architecture.md  getting-started.md  gtd-cheatsheet.md  inbox-outbox-protocol.md  mcp-server.md  naming-convention.md  naming-protocol.md  operating-instructions-opening-ceremony.md  setup.md  workflow.md
docs/adr/: 2026-01-07-monorepo-architecture-exploration.md  2026-01-08-project-level-skill-discovery.md  2026-01-12-tdd-pipeline-and-agent-orchestration.md  README.md
governance/: README.md
governance/canon/: operating-instructions.md  tantric-sutras.md  transmission-protocol.md
infrastructure/terminusdb/: .env.example  README.md  docker-compose.yml  setup_database.py  test_connection.py
mcp-server/: .gitignore  tsconfig.json
mcp-server/src/: index.ts
ops/journal/: 2026-01-14-founding-session.md  2026-01-14-infrastructure-implementation-session.md
outputs/: Transmission_Governance_Secrets_Audit_Report.xml  Transmission_Governance_Secrets_Implementation_Report.xml  Transmission_aiandi-transformation_Report_Implementation.xml
packaging/: install.sh
packaging/aur/: PACKAGE-SUMMARY.md
research/: gtd-taskwarrior-landscape.md
shared/events/: README.md  (+5 more)
shared/utils/rust-cli/: Cargo.toml  README.md
shared/utils/rust-cli/src/: lib.rs
templates/: comprehensive.md  minimal.md
(+107 files in other folders)
