[package]
name = "spanda-cli"
version = "0.1.0"
edition = "2021"
description = "Shared CLI command execution utilities for Spanda Works Rust packages"
license = "MIT"
authors = ["Robbie <robert.david.grossman@gmail.com>"]

[lib]
name = "spanda_cli"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["process", "io-util"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros"] }
